--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "toolioai",
   "version": "1.0.0",
+  "private": true,
   "dependencies": {
     "react-scripts": "^5.0.1",
     "react": "^18.2.0",
@@ -14,5 +15,23 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
